# sandbox

./: .gitignore  .node-version  README.md  __.node-version  package-lock.json  package.json
async-runtime/: Cargo.toml
bun-hono-http-server/: README.md  biome.json  bun.lockb  package-lock.json  package.json
c10k-exp/: README.md
chat-async/: Cargo.toml
combobox-with-headless-ui/: README.md  package-lock.json  package.json
commitlint-playground/: README.md  commitlint.config.js  package-lock.json  package.json
concurrency-is-not-parallelism/: README.md  main.go
eslint-flat-config/: eslint.config.mjs  package-lock.json  package.json
rdbms-from-scratch/: Cargo.toml  README.md  memo.md
rdbms-from-scratch/examples/: btree-create.rs  btree-large-query.rs  btree-query.rs  simple-table-create.rs  simple-table-plan.rs  simple-table-range.rs  table-index.rs
rdbms-from-scratch/src/: btree.rs  buffer.rs  disk.rs  lib.rs  query.rs  table.rs
rdbms-webdb-press/: Cargo.toml  README.md
rdbms-webdb-press/examples/: btree-all.rs  btree-large.rs  btree-range.rs  simple-table-all.rs  simple-table-exact.rs  simple-table-scan.rs  table-create.rs  table-large.rs
rdbms-webdb-press/src/: query.rs
rust-cqrs-es-todo/: Cargo.toml  README.md  docker-compose.yml  rust-cqrs-es-todo-PLAN.md
rust-cqrs-es-todo/docs/: cqrs-data-flow.md  snapshots.md
rust-cqrs-es-todo/src/: main.rs
rust-cqrs-es-todo/src/application/: command_handler.rs  mod.rs  query_handler.rs
rust-cqrs-es-todo/src/domain/: commands.rs  events.rs  mod.rs  todo.rs
rust-cqrs-es-todo/src/infrastructure/: event_store.rs  mod.rs  read_model.rs  schema.rs
rust-tutorial/chapter14/: Cargo.toml
rust-tutorial/chapter14/src/: lib.rs  main.rs
zero2prod/: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  configuration.yaml  fly.toml  sqlx-data.json
zero2prod/.github/workflows/: audit.yaml  deploy.yaml  general.yaml
zero2prod/configuration/: production.yaml
zero2prod/migrations/: 20230715022838_create_subscriptions_table.sql  20230807105048_make_status_not_null_in_subscriptions.sql  20230807105609_create_subscription_tokens_table.sql  20230813034052_create_users_table.sql  20230813074216_add_salt_to_users.sql  20230813080611_remove_salt_from_users.sql  20230816141605_seed_user.sql  20230819085615_create_idempotency_table.sql  20230820025500_relax_null_checks_on_idempotency.sql  20230822145415_create_newsletter_issues_table.sql  20230822150402_create_issue_delivery_queue_table.sql
zero2prod/scripts/: init_db.sh  init_redis.sh
zero2prod/src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
zero2prod/src/authentication/: middleware.rs  password.rs
zero2prod/src/domain/: subscriber_email.rs  subscriber_name.rs
zero2prod/src/idempotency/: key.rs  mod.rs  persistence.rs
zero2prod/src/routes/: mod.rs  subscriptions.rs  subscriptions_confirm.rs
zero2prod/src/routes/admin/: dashboard.rs  logout.rs  mod.rs
zero2prod/src/routes/admin/newsletters/: get.rs  mod.rs  post.rs
zero2prod/src/routes/admin/password/: get.rs  post.rs
zero2prod/src/routes/home/: home.html
zero2prod/src/routes/login/: get.rs  login.html  post.rs
zero2prod/tests/api/: admin_dashboard.rs  change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  publish_newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
(+521 files in other folders)
