[package]
name = "rdbms_from_scratch"
version = "0.1.0"
authors = ["nissy-dev <nd.12021218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# zerocopy = "0.3"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.1"
