[package]
name = "rdbms_from_scratch"
version = "0.1.0"
authors = ["nissy-dev <nd.12021218@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bincode = "1.3"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
zerocopy = "0.3"

[dev-dependencies]
tempfile = "3.1"
sha-1 = "0.9"
md-5 = "0.9"
