[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
name = "zero2prod"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.7", features = ["redis-rs-tls-session"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.4", features = ["cookies"] }
actix-web-lab = "0.18"
argon2 = { version = "0.4", features = ["std"] }
anyhow = "1"
base64 = "0.21"
chrono = { version = "0.4.22", default-features = false, features = ["clock"] }
config = "0.13"
once_cell = "1"
rand = { version = "0.8", features=["std_rng"] }
reqwest = { version = "0.11", default-features = false, features= ["json", "rustls-tls", "cookies"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde-aux = "4"
serde_json= "1"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.6", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"] }
thiserror = "1"
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.7"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
unicode-segmentation = "1"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

[dev-dependencies]
claims = "0.7"
fake = "2.6.1"
linkify = "0.9"
rand = "0.8.5"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
