[package]
name = "chapter14"
version = "0.1.0"
authors = ["nd-02110114 <nd.12021218@gmail.com>"]
edition = "2018"
description = "test publish"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
